Changes to Version 2.0-6
    o  change influenceIndexPlots to used type="h" rather than type="l"

Changes to Version 2.0-5

    o  add xlab and ylab arguments to avPlots, crPlots, ceresPlots, etc.,
to override default labeling if desired.

    o  fix col and col.lines arguments in avPlots, crPlots, ceresPlots, etc., so
graphical functions work the same way.

    o  small fixes to docs.

Changes to Version 2.0-4

    o  fix col argument to work to set point colors with residualPlots, leveragePlots, invTranPlot, marginalModelPlots

Changes to Version 2.0-3

    o  coefTable() changed to compareCoefs() to avoid name clash with the miscTools package (reported Arne Henningsen).
    
    o  Small changes.

Changes to Version 2.0-2

    o leaps package demoted from Depends to Suggests to avoid problem for Debian (reported by Dirk Eddelbuettel).

Changes to Version 2.0-1

    o  No longer export non-standard coef.multinom() (problem reported by Brian Ripley, Achim Zeileis).

Changes to Version 2.0-0

	o  Functions renamed to camel case.
	
	o  New functions: bootCase(), Boxplot(), deltaMethod(), inverseResponsePlot(), invTranPlot(), various transformation functions
	
	o  Reworked (or renamed): Anova(), avPlots(), boxCoxVariable(), boxTidwell(), ceresPlots(), crPlots(), durbinWatsonTest(), hccm(), influencePlot(), leveneTest(), leveragePlots(), linearHypothesis(), ncvTest(), outlierTest(), qqPlot(), regLine(), scatterplot(), scatterplotMatrix(), spreadLevelPlot(), transformation-axis functions, vif().
	
	o  Removed: Ask(), box.cox.powers(), box.cox(), cookd(), n.bins().
	
	o  Added WeightLoss data set (courtesy of Michael Friendly).
	
	o  Utility functions no longer exported; some removed.
	
	o  Most moved, renamed, removed functions retained as deprecated functions.
	
	o  Improvements to linearHypothesis(), thanks to Achim Zeileis.
	
	o  Small changes.

Changes to Version 1.0-0

   o Added functions for effects plots [see help(effect)].
   