@@ -2,7 +2,7 @@ Package: car
 Version: 2.0-6
 Date: 2010/10/05
 Title: Companion to Applied Regression
-Author: John Fox <jfox@mcmaster.ca> and Sanford Weisberg <sandy@stat.umn.edu>. We are grateful to Douglas Bates, David Firth, Michael Friendly, Gregor Gorjanc, Spencer Graves, Richard Heiberger, Georges Monette, Henric Nilsson, Derek Ogle, Brian Ripley, and Achim Zeileis for various suggestions and contributions.
+Author: John Fox <jfox@mcmaster.ca> and Sanford Weisberg <sandy@stat.umn.edu>. We are grateful to Douglas Bates, David Firth, Michael Friendly, Gregor Gorjanc, Spencer Graves, Richard Heiberger, Rafael Laboissiere, Georges Monette, Henric Nilsson, Derek Ogle, Brian Ripley, and Achim Zeileis for various suggestions and contributions.
 Maintainer: John Fox <jfox@mcmaster.ca>
 Depends: R (>= 2.1.1), stats, graphics, MASS, nnet, survival
 Suggests: alr3, leaps, lmtest, sandwich, mgcv, rgl
